--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/image.png" />
+  <link rel="icon" type="image/svg+xml" href="/image.webp" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta description="Presentacion de Bootstrap de Rodrigo Rey y Roman Ferrero" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
